--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.16",
+    "get-catholic-daily-readings": "^1.3.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "romcal": "^1.3.0"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
