--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "get-catholic-daily-readings": "^1.3.6",
     "next": "14.0.4",
