--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.16",
     "get-catholic-daily-readings": "^1.3.6",
     "next": "14.0.4",
+    "puppeteer": "^21.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
