--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "framer-motion": "^10.16.16",
     "get-catholic-daily-readings": "^1.3.6",
     "next": "14.0.4",
-    "puppeteer": "^21.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
@@ -33,7 +33,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5",
-    "puppeteer": "^12.0.0"
+    "typescript": "^5"
   }
 }
