--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.16",
     "get-catholic-daily-readings": "^1.3.6",
     "next": "14.0.4",
+    "next-plausible": "^3.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
