--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
+    "date-fns": "^3.1.0",
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.16",
     "get-catholic-daily-readings": "^1.3.6",
