--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "next-plausible": "^3.12.0",
     "react": "^18",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
