--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/react-datepicker": "^4.19.5",
     "axios": "^1.6.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
