--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.16",
-    "next": "14.0.4",
+    "next": ">=14.1.1",
     "next-plausible": "^3.12.0",
     "react": "^18",
     "react-datepicker": "^4.25.0",
